--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
@@ -23,8 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
@@ -40,6 +44,7 @@
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "prisma": "^4.16.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
