--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@auth/prisma-adapter": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "^0.105.0-alpha.4",
     "nanoid": "^5.0.7",
     "next": "^13.4.4",
     "next-auth": "^4.24.7",
