--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.383.0",
     "nanoid": "^5.0.7",
-    "next": "^13.4.4",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
@@ -52,7 +52,7 @@
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.0",
